--- a/frontend/mgr-frontend/src/App.css
+++ b/frontend/mgr-frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-logo {
@@ -23,11 +24,33 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.AppInput {
+  font-size: 20px;
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin: 10px auto;
+  color: #747474;
+  border-radius: 0;
+  background-color: #282828;
+  border-color: #1b1c20;
+  border-width: 2px;
+  border-style: solid;
+  box-sizing: border-box;
+}
+
+.AppButton {
+  display: block;
+  border: 0px;
+  height: 70px;
+  width: 300px;
+  margin: 50px auto;
+  background-color: #f6d367;
+  font-size: 20px;
+}
+
+.SignForm {
+  display: block;
+  width: 600px;
+  margin: auto;
 }
