--- a/frontend/mgr-frontend/src/App.css
+++ b/frontend/mgr-frontend/src/App.css
@@ -39,6 +39,21 @@
   box-sizing: border-box;
 }
 
+.AppSelect {
+  font-size: 20px;
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin: 10px auto;
+  color: #747474;
+  border-radius: 0;
+  background-color: #282828;
+  border-color: #1b1c20;
+  border-width: 2px;
+  border-style: solid;
+  box-sizing: border-box;
+}
+
 .AppButton {
   display: block;
   border: 0px;
