--- a/frontend/mgr-frontend/src/components/navBar/navBar.css
+++ b/frontend/mgr-frontend/src/components/navBar/navBar.css
@@ -1,36 +1,50 @@
 .navBar {
-    background-color: #f6d367;
+    background-color: #2c3e50;
     height: 80px;
     position: relative;
 }
 
-.mainMenu {
+.mainMenu,.signInMenu {
     list-style: none;
     text-align: center;
     color: white;
     margin: auto;
     position: absolute;
-    right: 0px;
 }
 
-.mainMenu li {
+.signInMenu {
+    right: 200px;
+}
+
+.mainMenu {
+    left: 200px;
+}
+
+.signUp {
+    border: white 1px solid;
+}
+
+.signIn {
+    color: #2c3e50;
+    background: white;
+    margin: 20px;
+}
+
+.mainMenu li, .signInMenu li {
+    padding: 14px 20px;
+    border-radius: 15px;
+    height: 45px;
     display: inline-block;
-    padding: 27px 30px;
-    background-color: #1b1c20;
-    height: 80px;
     box-sizing: border-box;
-    border-bottom: #f6d367 solid 2px;
-    transition: 0.2s;
 }
 
-.mainMenu li:hover {
+/* .mainMenu li:hover {
     border-bottom: #f6d367 solid 4px;
-}
+} */
 
 a {
     text-decoration: none;
     color: white;
-    transition: 0.2s;
 }
 
 .adv-search-form{
