--- a/frontend/mgr-frontend/src/App.css
+++ b/frontend/mgr-frontend/src/App.css
@@ -1,39 +1,13 @@
-.App {
-  text-align: center;
-  height: 100vh;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .AppInput {
   font-size: 20px;
   display: block;
-  width: 100%;
+  width: 80%;
   height: 50px;
   margin: 10px auto;
-  color: #747474;
-  border-radius: 0;
-  background-color: #282828;
-  border-color: #1b1c20;
+  color: #2c3e50;
+  border-radius: 15px;
+  background-color: #eee;
+  border-color: #ccc;
   border-width: 2px;
   border-style: solid;
   box-sizing: border-box;
@@ -42,25 +16,27 @@
 .AppSelect {
   font-size: 20px;
   display: block;
-  width: 100%;
+  width: 80%;
   height: 50px;
   margin: 10px auto;
-  color: #747474;
-  border-radius: 0;
-  background-color: #282828;
-  border-color: #1b1c20;
+  color: #2c3e50;
+  border-radius: 15px;
+  background-color: #eee;
+  border-color: #ccc;
   border-width: 2px;
   border-style: solid;
   box-sizing: border-box;
 }
 
 .AppButton {
+  color: white;
   display: block;
-  border: 0px;
+  border: 1px solid #eee;
+  border-radius: 15px;
   height: 70px;
   width: 300px;
   margin: 50px auto;
-  background-color: #f6d367;
+  background-color: #2c3e50;
   font-size: 20px;
 }
 
