--- a/frontend/mgr-frontend/src/components/navBar/navBar.css
+++ b/frontend/mgr-frontend/src/components/navBar/navBar.css
@@ -1,9 +1,3 @@
-.navBar {
-    height: 80px;
-    position: relative;
-    background-color: #2c3e50;
-}
-
 .mainMenu, .signInMenu, .logoutPanel {
     list-style: none;
     text-align: center;
@@ -15,12 +9,18 @@
     font-family: 'Montserrat';
 }
 
+.navBar {
+    height: 80px;
+    position: relative;
+    background-color: #2c3e50;
+}
+
 .signInMenu {
     right: 200px;
 }
 
 .mainMenu {
-    left: 150px;
+    left: 120px;
 }
 
 .signUp {
@@ -68,6 +68,15 @@
     cursor: pointer;
     transition: 0.4s;
     margin: 0 30px;
+}
+
+.logo {
+    height: 60px;
+    position: absolute;
+    top: 52%;
+    transform: translateY(-50%);
+    margin: 0 30px;
+    left: 50px;
 }
 
 .welcome {
