--- a/frontend/mgr-frontend/src/index.css
+++ b/frontend/mgr-frontend/src/index.css
@@ -5,7 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
-  color: white;
+  color: #2c3e50;
 }
 
 code {
