--- a/frontend/mgr-frontend/src/App.css
+++ b/frontend/mgr-frontend/src/App.css
@@ -4,7 +4,7 @@
   width: 80%;
   height: 50px;
   margin: 10px auto;
-  color: #2c3e50;
+  color: #777;
   border-radius: 15px;
   background-color: #eee;
   border-color: #ccc;
@@ -19,7 +19,7 @@
   width: 80%;
   height: 50px;
   margin: 10px auto;
-  color: #2c3e50;
+  color: #777;
   border-radius: 15px;
   background-color: #eee;
   border-color: #ccc;
@@ -38,6 +38,12 @@
   margin: 50px auto;
   background-color: #2c3e50;
   font-size: 20px;
+  transition: 0.4s;
+}
+
+.AppButton:hover {
+  color: #ccc;
+  border: 1px solid #ccc;
 }
 
 .SignForm {
