--- a/frontend/mgr-frontend/src/index.css
+++ b/frontend/mgr-frontend/src/index.css
@@ -13,6 +13,23 @@ code {
     monospace;
 }
 
-h1 {
+h1, h2{
   text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #aaa;
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #999;
 }
