--- a/frontend/mgr-frontend/src/index.css
+++ b/frontend/mgr-frontend/src/index.css
@@ -13,8 +13,22 @@ code {
     monospace;
 }
 
-h1, h2{
+h1, h2, h3 {
   text-align: center;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+h3 {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 16px;
 }
 
 ::-webkit-scrollbar {
